rns-lang/tests/snapshots/parser-class_directive-header-trailing_tokens-public_keyword.snap
---
source: jasm/tests/integration_test.rs
expression: "&combined"
---
----- INPUT  -----
.class HelloWorld public
.super java/lang/Object

----- STDOUT -----

----- STDERR -----
Error: unexpected keyword after class name
   ╭─[ test_data/integration/parser/class_directive/header/trailing_tokens/public_keyword.ja:1:19 ]
   │
 1 │ .class HelloWorld public
   │                   ───┬──  
   │                      ╰──── access flags must appear before the class name
   │ 
   │ Note: Access flags must appear before the class name: '.class [access_flags] <name>'
───╯
